[gd_scene load_steps=20 format=3 uid="uid://ci4c4b21gi4nu"]

[ext_resource type="Script" path="res://entities/character/player.gd" id="1_b8tke"]
[ext_resource type="Script" path="res://entities/character/player_audio.gd" id="2_0wpio"]
[ext_resource type="PackedScene" uid="uid://cmrjd352jta3n" path="res://entities/audio/audio_queue.tscn" id="3_odvb5"]
[ext_resource type="AudioStream" uid="uid://c5l7nql7q2vep" path="res://audio/player_audio/foot/concrete/concrete04.wav" id="4_hhscb"]
[ext_resource type="AudioStream" uid="uid://ce6n8fdt6k7yg" path="res://audio/player_audio/132106__sironboy__woman-scream.wav" id="5_lb0m5"]
[ext_resource type="Script" path="res://entities/audio/audio_random.gd" id="6_7yn43"]
[ext_resource type="AudioStream" uid="uid://dposlfb3ullvi" path="res://audio/player_audio/foot/concrete/concrete00.wav" id="7_exnn4"]
[ext_resource type="AudioStream" uid="uid://c8rpa32xhm5my" path="res://audio/player_audio/foot/concrete/concrete01.wav" id="8_rgg4p"]
[ext_resource type="AudioStream" uid="uid://pflvuilklypq" path="res://audio/player_audio/foot/concrete/concrete02.wav" id="9_jd8s4"]
[ext_resource type="AudioStream" uid="uid://bxdydw24ucsad" path="res://audio/player_audio/foot/concrete/concrete03.wav" id="10_f6xcs"]
[ext_resource type="AudioStream" uid="uid://c5mvuciindli0" path="res://audio/player_audio/foot/concrete/concrete05.wav" id="11_auxj4"]
[ext_resource type="AudioStream" uid="uid://cgcpd36vpfafs" path="res://audio/player_audio/foot/concrete/concrete06.wav" id="12_bn5x4"]
[ext_resource type="Script" path="res://entities/state/finite_state_machine.gd" id="13_fpsgy"]
[ext_resource type="Script" path="res://entities/character/kinematic/kinematic_ground_state.gd" id="14_3e3ij"]
[ext_resource type="Script" path="res://entities/character/kinematic/kinematic_air_state.gd" id="15_mo5br"]
[ext_resource type="Script" path="res://entities/character/controller/controller_move_state.gd" id="16_snepx"]
[ext_resource type="Script" path="res://entities/character/controller/controller_idle_state.gd" id="17_ytc4t"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bk7ra"]
radius = 0.3
height = 1.3

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_aw4en"]
radius = 0.3
height = 1.1

[node name="Player" type="CharacterBody3D"]
collision_layer = 0
collision_mask = 3
wall_min_slide_angle = 0.785398
floor_constant_speed = true
script = ExtResource("1_b8tke")

[node name="stand_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 1.15, 2.08165e-12)
shape = SubResource("CapsuleShape3D_bk7ra")

[node name="sneak_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 1.05, 2.08165e-12)
shape = SubResource("CapsuleShape3D_aw4en")
disabled = true

[node name="NeckPivot" type="Node3D" parent="."]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 2.08165e-12, 1.5, 2.08165e-12)

[node name="Camera" type="Camera3D" parent="NeckPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
cull_mask = 524287

[node name="InteractRay" type="RayCast3D" parent="NeckPivot/Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
target_position = Vector3(0, 0.1, -2)
collision_mask = 4

[node name="PlayerAudio" type="Node3D" parent="NeckPivot"]
script = ExtResource("2_0wpio")

[node name="LandAudio" parent="NeckPivot/PlayerAudio" instance=ExtResource("3_odvb5")]
count = 2

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="NeckPivot/PlayerAudio/LandAudio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
stream = ExtResource("4_hhscb")

[node name="JumpAudio" parent="NeckPivot/PlayerAudio" instance=ExtResource("3_odvb5")]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="NeckPivot/PlayerAudio/JumpAudio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.08165e-12, 0)
stream = ExtResource("5_lb0m5")

[node name="FootstepAudioRandom" type="Node3D" parent="NeckPivot/PlayerAudio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0, 2.08165e-12)
script = ExtResource("6_7yn43")

[node name="FootstepAudio" parent="NeckPivot/PlayerAudio/FootstepAudioRandom" instance=ExtResource("3_odvb5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.08165e-12, 0, -2.08165e-12)
count = 3

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="NeckPivot/PlayerAudio/FootstepAudioRandom/FootstepAudio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.08165e-12, 0)
stream = ExtResource("7_exnn4")
volume_db = 3.0

[node name="FootstepAudio2" parent="NeckPivot/PlayerAudio/FootstepAudioRandom" instance=ExtResource("3_odvb5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.08165e-12, 0, -2.08165e-12)
count = 3

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="NeckPivot/PlayerAudio/FootstepAudioRandom/FootstepAudio2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.08165e-12, 0)
stream = ExtResource("8_rgg4p")

[node name="FootstepAudio3" parent="NeckPivot/PlayerAudio/FootstepAudioRandom" instance=ExtResource("3_odvb5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.08165e-12, 0, -2.08165e-12)
count = 3

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="NeckPivot/PlayerAudio/FootstepAudioRandom/FootstepAudio3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.08165e-12, 0)
stream = ExtResource("9_jd8s4")

[node name="FootstepAudio4" parent="NeckPivot/PlayerAudio/FootstepAudioRandom" instance=ExtResource("3_odvb5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.08165e-12, 0, -2.08165e-12)
count = 3

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="NeckPivot/PlayerAudio/FootstepAudioRandom/FootstepAudio4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.08165e-12, 0)
stream = ExtResource("10_f6xcs")

[node name="FootstepAudio6" parent="NeckPivot/PlayerAudio/FootstepAudioRandom" instance=ExtResource("3_odvb5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.08165e-12, 0, -2.08165e-12)
count = 3

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="NeckPivot/PlayerAudio/FootstepAudioRandom/FootstepAudio6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.08165e-12, 0)
stream = ExtResource("11_auxj4")

[node name="FootstepAudio7" parent="NeckPivot/PlayerAudio/FootstepAudioRandom" instance=ExtResource("3_odvb5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.08165e-12, 0, -2.08165e-12)
count = 3

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="NeckPivot/PlayerAudio/FootstepAudioRandom/FootstepAudio7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.08165e-12, 0)
stream = ExtResource("12_bn5x4")

[node name="FloorRaycast" type="RayCast3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.08165e-12, 0.6, 2.08165e-12)
target_position = Vector3(2.08165e-12, -1, 2.08165e-12)
collision_mask = 3

[node name="CeillingRaycast" type="RayCast3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1, 0)
target_position = Vector3(0, 1.2, 0)
collision_mask = 3
collide_with_areas = true

[node name="KinematicControllerFSM" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("13_fpsgy")
current_state = NodePath("KinematicAirState")

[node name="KinematicGroundState" type="Node" parent="KinematicControllerFSM"]
script = ExtResource("14_3e3ij")

[node name="KinematicAirState" type="Node" parent="KinematicControllerFSM"]
script = ExtResource("15_mo5br")

[node name="InputControllerFSM" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("13_fpsgy")
current_state = NodePath("ControllerIdleState")

[node name="ControllerMoveState" type="Node" parent="InputControllerFSM"]
script = ExtResource("16_snepx")

[node name="ControllerIdleState" type="Node" parent="InputControllerFSM"]
script = ExtResource("17_ytc4t")
